@@ -1,6 +1,9 @@
 Change log for hexer, the multi-view binary editor
 
 0.1.7	not yet ;)
+	- fix searching for characters with a code point above 127
+	  Reported by: Michael Gold <mgold@ncf.ca> in Debian bug #633508
+	- bump the year of my copyright notice on files changed in 2011
 
 0.1.6	2010/12/29
 	- fix some errors and warnings detected by cppcheck:
